# mv-digital-ruler-android

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/windula/mv_cpp_android_digital_ruler/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  HomogeneousBgDetector.cpp  HomogeneousBgDetector.h  main.cpp  main.h  mv_cpp_android_digital_ruler.cpp
app/src/main/java/com/windula/mv_cpp_android_digital_ruler/: MainActivity.java
app/src/main/kotlin/com/windula/mv_cpp_android_digital_ruler/: CalibrateActivity.kt  DetectActivity.kt  MainActivity.kt  OverlayView.kt
app/src/main/res/layout/: activity_main.xml  camera_calibrate.xml  camera_detect.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/windula/mv_cpp_android_digital_ruler/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
